# AutoFL

./: .gitignore  .gitmodules  404.html  CITATION.cff  README.md  docker-compose.yaml  index.html  mkdocs.yaml  mkdocs_requirements.txt  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yaml
config/: main.yaml  runs.yaml  test.yaml
config/annotator/: default.yaml  keyword_25_tp.yaml  keyword_50_tp.yaml  keyword_identifiers_25_tp.yaml  keyword_identifiers_50_tp.yaml  keyword_name_none_none.yaml  similarity_w2v-so_none_none.yaml  simple.yaml  test.yaml
config/dataloader/: gitranking.yaml  mongo.yaml  postgres.yaml  zaki.yaml
config/environment/: docker.yaml
config/filtering/: jsd50.yaml
config/keyword_extraction/: rake.yaml  yake.yaml
config/lf/: keyword.yaml
config/local/: default.yaml  docker.yaml
config/run/: batch_annotation.yaml  batch_file_annotation.yaml  batch_keyword_extraction.yaml
config/taxonomy/: gitranking.yaml  small.yaml
config/transformation/: single_label.yaml
config/version_strategy/: latest.yaml  noop.yaml
config/writer/: file.yaml  mongo.yaml  postgres.yaml  postgres_local.yaml
docker/: Dockerfile  init-database.sh
docker/antlr/: Dockerfile  README.md
docker/sql/: 01_init.sql
docs/: index.md
mongodb/initdb.d/: init-mongo.sh
notebooks/resources/: example.java  hello.java
notebooks/test/: tree_sitter.ipynb
reference/SUMMARY/: index.html
reference/annotation/: index.html
reference/api/: index.html
reference/batch/: index.html
reference/dataloader/: index.html
reference/embedding/: index.html
reference/ensemble/: index.html
reference/entity/: index.html
reference/execution/: index.html
reference/keyword_extraction/: index.html
reference/parser/: index.html
reference/pipeline/: index.html
reference/utils/: index.html
reference/vcs/: index.html
reference/writer/: index.html
scripts/bash/: antlr_install.sh  build_grammars.sh
scripts/python/: build_tree_sitter_library.py  gen_ref_pages.py  json_to_csv_projectlist.py  module_annot.py  reformat_project_list.py  to_hf_dataset.py
search/: search_index.json
src/analysis/: label_files.py
src/annotation/: annotator.py  filtering.py  keyword.py  lf.py  similarity.py  transformation.py
src/api/: analysis.py  execute_annotation.py  main.py  run_analysis.py
src/batch/: batch_annotation.py  batch_file_annotation.py  batch_keyword_extraction.py  batch_process.py
src/dataloader/: csv_dataloader.py  dataloader.py  db_dataloader.py  gitranking.py  json_dataloader.py  mongo_dataloader.py  postgres_dataloader.py  zaki.py
src/embedding/: __init__.py  abstract.py  embedding.py  ft.py  gensim_w2v.py  huggingface.py  spacy_bert.py
src/ensemble/: avg.py  cascade.py  ensemble.py  none.py  voting.py
src/entity/: __init__.py  analysis.py  annotation.py  file.py  project.py  taxonomy.py
src/execution/: annotation.py  execution.py  file_annotation.py  keyword_extraction.py
src/keyword_extraction/: keyword_extraction.py  rake.py  yake.py
src/lf/: __init__.py  keyword.py  lf.py  lfbase.py  similarity.py
src/loader/: loader.py  project_loader.py
src/parser/: __init__.py  extensions.py  java.py  language.py  parser.py  python.py
src/persistance/: db.py  file.py  writer.py
src/pipeline/: annotation.py  file_annotation.py  identifier_extraction.py  pipeline.py  (+3 more)
test/: java.py
(+655 files in other folders)
