[tool.poetry]
name = "autofl"
version = "0.4.1"
description = ""
authors = ["Cezar Sas <cezar.sas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.109.0"
gunicorn = "^21.2.0"
uvicorn = "^0.27.0"
pandas = "^2.2.0"
hydra-core = "^1.3.2"
setuptools = "^69.0.3"
multiset = "^3.0.2"
scikit-learn = "^1.4.0"
pydantic = "^2.5.3"
gitpython = "^3.1.41"
loguru = "^0.7.1"
tqdm = "^4.66.1"
# yake = { git = "git@github.com:LIAAD/yake.git" }
python-rake = "^1.5.0"
more-itertools = "^10.2.0"
tree-sitter = "^0.20.4"
sqlalchemy = "^2.0.25"
psycopg = {extras = ["binary"], version = "^3.1.17"}
gensim = "^4.3.3"
fasttext-wheel = "^0.9.2"
transformers = "^4.37.1"
sentence-transformers = "^2.2.2"

[tool.poetry.group.dev.dependencies]
notebook = "^6.5.4"
jupyter = "^1.0.0"
mkdocs = "^1.5.3"
mkdocstrings = "^0.24.0"
mkdocs-gen-files = "^0.5.0"
mkdocstrings-python = "^1.7.5"
mkdocs-literate-nav = "^0.6.1"
mkdocs-section-index = "^0.3.8"
mkdocs-material = "^9.4.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
